# rdw_blog_repo

./: .env.example  .gitignore  README.md  databricks.yml  pyproject.toml  taskfile.yml
dashboard/: databricks-dashboard-json-agent.md
dashboard/src/: rdw_dashboard.lvdash.json
src/rdw/: __init__.py  conf.py  definitions.py
src/rdw/dqx_checks/: odometer_reading_judgment_explanation.yml  registered_vehicles.yml  registered_vehicles_axles.yml  registered_vehicles_body.yml  registered_vehicles_body_specification.yml  registered_vehicles_class.yml  registered_vehicles_crawler_tracks.yml  registered_vehicles_fuel.yml  registered_vehicles_special_features.yml  registered_vehicles_subcategory.yml
src/rdw/jobs/: download_rdw_data.py  prepare_silver_layer.py  process_bronze_layer.py  process_gold_layer.py  process_silver_layer.py
src/rdw/scd2/: __init__.py  processor.py
src/rdw/utils/: logging_config.py  models.py  spark_session.py  utils.py
src/rdw/views/: vehicle_fleet_metrics.yml
tests/: conftest.py
tests/fixtures/: spark_fixture.py
tests/integration_tests/: test_jobs_integration.py
tests/unit_tests/: test_bronze.py  test_models.py  test_scd2.py  test_spark.py  test_utils.py
webapp/: WEBAPP_CLAUDE.md  __init__.py  ai_car_chat.py  ai_chat.py  app.py  app.yaml  requirements.txt
webapp/callbacks/: __init__.py  chat_callbacks.py  filter_callbacks.py  results_callbacks.py  routing_callbacks.py
webapp/components/: __init__.py  chat.py  filters.py  layouts.py  results.py
webapp/tabs/: __init__.py  common.py  license_plate.py  prompt_feedback.py
webapp/utils/: __init__.py  data_loader.py  helpers.py  styles.py
